{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "4b4de957-8009-ec20-17ed-891f7a0b8153",
  "resources": [
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4b3eb9a6156bbff",
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:elastic-ip/eipalloc-0f4b3eb9a6156bbff",
            "domain": "vpc",
            "id": "eipalloc-0f4b3eb9a6156bbff",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-47-130-30-226.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.30.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:internet-gateway/igw-0db6d0f76305c5bf5",
            "id": "igw-0db6d0f76305c5bf5",
            "owner_id": "124718958862",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-004daac3158482730"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4b3eb9a6156bbff",
            "association_id": "eipassoc-0c2a4520df30b109e",
            "connectivity_type": "public",
            "id": "nat-0de522b84a90a7512",
            "network_interface_id": "eni-038f41932de5accde",
            "private_ip": "10.0.3.164",
            "public_ip": "47.130.30.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02bf13ffb2b372892"
          },
          "dependencies": [
            "module.eks.aws_eip.nat_eip",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fde1959730f913ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0de522b84a90a7512",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fde1959730f913ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat_eip",
            "module.eks.aws_nat_gateway.natgw",
            "module.eks.aws_route_table.private_rt",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db6d0f76305c5bf5",
            "id": "r-rtb-088d25a1bb3ad3e971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088d25a1bb3ad3e97",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_route_table.public_rt",
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:route-table/rtb-0fde1959730f913ee",
            "id": "rtb-0fde1959730f913ee",
            "owner_id": "124718958862",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004daac3158482730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:route-table/rtb-088d25a1bb3ad3e97",
            "id": "rtb-088d25a1bb3ad3e97",
            "owner_id": "124718958862",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004daac3158482730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b1779a3859ce751",
            "route_table_id": "rtb-0fde1959730f913ee",
            "subnet_id": "subnet-0945063acb29a60e9"
          },
          "dependencies": [
            "module.eks.aws_route_table.private_rt",
            "module.eks.aws_subnet.private_subnets",
            "module.eks.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ab649fd6637a201",
            "route_table_id": "rtb-0fde1959730f913ee",
            "subnet_id": "subnet-04a301b54d0fd1534"
          },
          "dependencies": [
            "module.eks.aws_route_table.private_rt",
            "module.eks.aws_subnet.private_subnets",
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0214e6e42883040ec",
            "route_table_id": "rtb-088d25a1bb3ad3e97",
            "subnet_id": "subnet-02bf13ffb2b372892"
          },
          "dependencies": [
            "module.eks.aws_route_table.public_rt",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:subnet/subnet-0945063acb29a60e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0945063acb29a60e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124718958862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-0"
            },
            "tags_all": {
              "Name": "eks-private-subnet-0"
            },
            "vpc_id": "vpc-004daac3158482730"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:subnet/subnet-04a301b54d0fd1534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a301b54d0fd1534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124718958862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1"
            },
            "vpc_id": "vpc-004daac3158482730"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:subnet/subnet-02bf13ffb2b372892",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bf13ffb2b372892",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124718958862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-004daac3158482730"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:124718958862:vpc/vpc-004daac3158482730",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ec935c760ec1122",
            "default_route_table_id": "rtb-0daad9e8b02c1ab6e",
            "default_security_group_id": "sg-0cd923b8051cd5558",
            "dhcp_options_id": "dopt-0e4c0e4afed3fa84b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004daac3158482730",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daad9e8b02c1ab6e",
            "owner_id": "124718958862",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}